package aimene.doex.bestelling.model;

public enum Valuta {
    EUR
}
